# ood

./: .gitignore  CMakeLists.txt  readme.md
beverages/: CMakeLists.txt  main.cpp
beverages/lib/: Beverages.h  Condiments.h  IBeverage.h
dance/: CMakeLists.txt  SimUDuck.cpp
dance/lib/: DuckFunctions.h
dance/lib/Duck/: DecoyDuck.h  Duck.h  MallardDuck.h  ModelDuck.h  RedheadDuck.h
dance/lib/Duck/Dance/: DanceMinuet.h  DanceNoWay.h  DanceWaltz.h  IDanceBehavior.h
dance/lib/Duck/Fly/: FlyNoWay.h  FlyWithWings.h  IFlyBehavior.h
dance/lib/Duck/Quack/: IQuackBehavior.h  MuteQuack.h  SoundQuack.h  SoundSqueak.h
dance/test/: test.cpp
func-style/: CMakeLists.txt  SimUDuck.cpp
func-style/lib/Behavior/: IDanceBehavior.h  IFlyBehavior.h  IQuackBehavior.h
func-style/lib/Duck/: DecoyDuck.h  Duck.h  MallardDuck.h  ModelDuck.h  RedheadDuck.h  RubberDuck.h
func-style/test/: test.cpp
many-subj/: CMakeLists.txt  main.cpp
many-subj/lib/: Observer.h  WeatherData.h
many-subj/test/: test.cpp
priority/: CMakeLists.txt  main.cpp
priority/lib/: Observer.h  WeatherData.h
priority/test/: test.cpp
remove/: CMakeLists.txt
remove/lib/: Observer.h
remove/test/: test.cpp
shape/: CMakeLists.txt  main.cpp
shape-factory/: CMakeLists.txt  main.cpp
shape-factory/lib/: Canvas.h  Common.h  Designer.h  IShapeFactory.h  Painter.h  PictureDraft.h  Shape.h  ShapeFactory.h
shape-factory/res/: commands.txt
shape-factory/test/: test.cpp
shape/lib/: BaseShape.cpp  BaseShape.h  Circle.cpp  Circle.h  CircleDrawStrategy.h  CommandProcessor.cpp  CommandProcessor.h  ICanvas.h  IDrawStrategy.h  IShape.h  Line.h  Picture.cpp  Picture.h  Point.h  Rectangle.cpp  Rectangle.h  ShapeCreator.cpp  ShapeCreator.h  SvgCanvas.cpp  SvgCanvas.h  TextShape.h  Triangle.h
shape/lib/Color/: Color.cpp  Color.h
state/: CMakeLists.txt  SimUDuck.cpp
state/lib/: DuckFunctions.h
state/lib/Duck/: Duck.h  MallardDuck.h  RubberDuck.h
state/lib/Duck/Fly/: FlyNoWay.h  FlyWithWings.h  IFlyBehavior.h
state/lib/Duck/Quack/: IQuackBehavior.h  MuteQuack.h  SoundQuack.h  SoundSqueak.h
statistics/: CMakeLists.txt  main.cpp
statistics/lib/: Observer.h  WeatherData.h
statistics/test/: test.cpp
wind/: CMakeLists.txt  main.cpp
wind/lib/: Displays.h  Observer.h  Statistics.h  WeatherDataTypes.h  WeatherStations.h
wind/test/: test.cpp
